implemented firebase functionality

--- a/src/components/alert-container/alert-container.style.less
+++ b/src/components/alert-container/alert-container.style.less
@@ -6,8 +6,8 @@
   padding-top: 0;
   padding-bottom: 0;
 
-  .item-inner::before {
-    content: unset;
+  div.item-inner::before {
+    content: unset !important;
   }
 
   .alert-item-grid {
@@ -19,7 +19,7 @@
   }
 
   .alert-icon {
-    width: 15vw;
+    width: 63px;
     padding: 10px;
     object-fit: contain;
     aspect-ratio: 1/1;
@@ -27,7 +27,7 @@
 
   .alert-location {
     margin: 0;
-    font-size: 9vw;
+    font-size: 38px;
     font-weight: 600;
   }
   .alert-distance {
@@ -35,9 +35,9 @@
     text-align: center;
   }
   .feedback-button {
-    height: 7vh;
+    height: 45px;
     text-transform: capitalize;
-    font-size: 6vw;
+    font-size: 19px;
     border-top: solid;
   }
 
