--- a/src/components/need-button/need-button.style.less
+++ b/src/components/need-button/need-button.style.less
@@ -2,4 +2,15 @@
   height: auto;
   font-size: 39px;
   text-wrap: wrap;
+
+  .alert-icon {
+    height: 90%;
+  }
+
+  .need-button-inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
