--- a/src/components/alert-container/alert-container.style.less
+++ b/src/components/alert-container/alert-container.style.less
@@ -27,7 +27,7 @@
 
   .alert-location {
     margin: 0;
-    font-size: 38px;
+    font-size: 30px;
     font-weight: 600;
   }
   .alert-distance {
@@ -52,4 +52,8 @@
     border-bottom: none;
     border-radius: 0;
   }
+}
+
+.list .item-link .item-inner {
+  padding-right: 12px;
 }
