--- a/src/components/dashboard-grid/dashboard-grid.style.less
+++ b/src/components/dashboard-grid/dashboard-grid.style.less
@@ -3,8 +3,11 @@
   grid-template-columns: 1fr 360px;
 
   .dashboard-grid-left {
-    height: 500px;
+    height: 550px;
     width: 900px;
+    border: grey;
+    border-style: dotted;
+    border-width: 5px;
     .grid-3 {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
