--- a/src/components/need-button-grid/need-button-grid.style.less
+++ b/src/components/need-button-grid/need-button-grid.style.less
@@ -1,7 +1,21 @@
-.need-button-grid {
+.need-button-grid-simple {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-rows: 1fr 1fr;
+  height: 96%;
+  padding: 2%;
+}
+.need-button-grid-regular {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: 1fr 1fr;
+  height: 96%;
+  padding: 2%;
+}
+.need-button-grid-advanced {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr 1fr;
   height: 96%;
   padding: 2%;
 }
