--- a/src/components/alert-container/alert-container.style.less
+++ b/src/components/alert-container/alert-container.style.less
@@ -2,7 +2,7 @@
   background-color: var(--f7-actions-bg-color);
   border-radius: 13px;
   margin: 20px 20px 20px 0px;
-  box-shadow: 0 7px 10px #88888863, 25px 0 var(--f7-md-primary);
+  box-shadow: 0 7px 10px #88888863, 25px 0 var(--f7-actions-bg-color);
   padding-top: 0;
   padding-bottom: 0;
 
@@ -56,4 +56,8 @@
 
 .list .item-link .item-inner {
   padding-right: 12px;
+}
+
+.accepted {
+  box-shadow: 0 7px 10px #88888863, 25px 0 var(--f7-md-primary) !important;
 }
