--- a/src/components/dashboard-grid/dashboard-grid.style.less
+++ b/src/components/dashboard-grid/dashboard-grid.style.less
@@ -6,7 +6,7 @@
     height: 550px;
     width: 900px;
     border: grey;
-    border-style: dotted;
+    border-style: double;
     border-width: 5px;
     .grid-3 {
       display: grid;
@@ -17,5 +17,9 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
     }
+  }
+  .dashboard-grid-right {
+    height: 550px;
+    overflow-y: auto;
   }
 }
